Gdb: Use 'C' format for variable printing

On Linux systems, GDB may produce localized output of
float/double variables, which inhibits changing the
display format in Creator.

Task-number: QTCREATORBUG-12800
Change-Id: Ic042979c78319ff029f08a8766c8719c46052374
Reviewed-by: Jochen Becher <jochen_becher@gmx.de>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: hjk <hjk@theqtcompany.com>